[gd_scene load_steps=5 format=3 uid="uid://dh6y8qyv2ovtr"]

[ext_resource type="Script" path="res://UI/ActionUI.gd" id="1_7c80b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7kxp"]
bg_color = Color(1, 0, 0, 1)
border_width_bottom = 2
border_color = Color(0.392157, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6mfi"]
bg_color = Color(0.901961, 0, 0, 1)
border_width_bottom = 2
border_color = Color(0.392157, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nlyi"]
bg_color = Color(0.784314, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ActionUI" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7c80b")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Header/Panel"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "awddwa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cancel" type="Button" parent="Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_a7kxp")
theme_override_styles/hover = SubResource("StyleBoxFlat_t6mfi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4nlyi")

[node name="ScrollContainerListParameters" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ListParameters" type="VBoxContainer" parent="ScrollContainerListParameters"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="Header/Panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="Header/Cancel" to="." method="_on_cancel_pressed"]
